--- a/css/main.css
+++ b/css/main.css
@@ -551,92 +551,6 @@ header.navigation {
           box-sizing: border-box;
           display: block; } }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\000031}}
-.hero {
-  background: url(../img/lake-transparent.png);
-  background-color: #40526b;
-  background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  padding-bottom: 4em; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000312}}
-  .hero .hero-logo img {
-    height: 3em;
-    margin-bottom: 1em; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000317}}
-  .hero .hero-inner {
-    max-width: 68em;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 3em;
-    margin: auto;
-    text-align: center;
-    color: white; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_clearfix\.scss}line{font-family:\0000315}}
-    .hero .hero-inner:after {
-      content: "";
-      display: table;
-      clear: both; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_clearfix\.scss}line{font-family:\0000315}}
-    .hero .hero-inner:after {
-      content: "";
-      display: table;
-      clear: both; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000325}}
-    .hero .hero-inner button {
-      border: 1px solid #2459a6;
-      border-radius: 3px;
-      box-shadow: inset 0 1px 0 0 #89a8d5;
-      color: white;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #477dca;
-      background-image: -webkit-linear-gradient(#477dca, #2760b2);
-      background-image: linear-gradient(#477dca, #2760b2);
-      padding: 7px 18px;
-      text-decoration: none;
-      text-shadow: 0 1px 0 #1b4f9a;
-      background-clip: padding-box;
-      font-size: 1em;
-      outline: none; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_button\.scss}line{font-family:\00003131}}
-      .hero .hero-inner button:hover:not(:disabled) {
-        box-shadow: inset 0 1px 0 0 #628cc8;
-        cursor: pointer;
-        background-color: #3c71bb;
-        background-image: -webkit-linear-gradient(#3c71bb, #255aa5);
-        background-image: linear-gradient(#3c71bb, #255aa5); }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_button\.scss}line{font-family:\00003148}}
-      .hero .hero-inner button:active:not(:disabled), .hero .hero-inner button:focus:not(:disabled) {
-        border: 1px solid #2459a6;
-        box-shadow: inset 0 0 8px 4px #235397, inset 0 0 8px 4px #235397; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_button\.scss}line{font-family:\0000351}}
-      .hero .hero-inner button:disabled {
-        opacity: 0.5;
-        cursor: not-allowed; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000331}}
-    .hero .hero-inner .hero-copy {
-      text-align: center; }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000334}}
-      .hero .hero-inner .hero-copy h1 {
-        font-size: 1.4em;
-        margin-bottom: .2em; }
-        @media screen and (min-width: 53.75em) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000334}}
-          .hero .hero-inner .hero-copy h1 {
-            font-size: 1.8em; } }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000343}}
-      .hero .hero-inner .hero-copy p {
-        margin: auto;
-        margin-bottom: 3em;
-        font-weight: 200; }
-        @media screen and (min-width: 53.75em) {
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_hero\.scss}line{font-family:\0000343}}
-          .hero .hero-inner .hero-copy p {
-            font-size: 1.2em;
-            max-width: 40%; } }
-
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/2-modules\/_footer\.scss}line{font-family:\000033}}
 .footer {
   background: #40526b;
@@ -717,3 +631,47 @@ header.navigation {
     margin: auto;
     max-width: 35em;
     text-align: center; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/3-layouts\/_home\.scss}line{font-family:\000032}}
+.content {
+  width: 53.75em;
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0 auto; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/bourbon\/addons\/_clearfix\.scss}line{font-family:\0000315}}
+  .content:after {
+    content: "";
+    display: table;
+    clear: both; }
+
+@media (min-width: 800px) {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/3-layouts\/_home\.scss}line{font-family:\000039}}
+  aside.sidebar1 {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 23.23176%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/neat\/grid\/_span-columns\.scss}line{font-family:\0000338}}
+    aside.sidebar1:last-child {
+      margin-right: 0; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/3-layouts\/_home\.scss}line{font-family:\0000313}}
+  aside.sidebar2 {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 23.23176%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/neat\/grid\/_span-columns\.scss}line{font-family:\0000338}}
+    aside.sidebar2:last-child {
+      margin-right: 0; }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/3-layouts\/_home\.scss}line{font-family:\0000318}}
+  article.main {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/rdrew\/Sites\/robs_html5_boilerplate\/sass\/0-plugins\/neat\/grid\/_span-columns\.scss}line{font-family:\0000338}}
+    article.main:last-child {
+      margin-right: 0; } }
